# netdisk-db

./: Cargo.toml  HTTP_REQUEST_USAGE.md  README.md  build.rs  config.example.json  config.json  document_search.db  file_search.db  test_search.rs  video_search.db
examples/: http_request_example.rs  mock_server.rs
src/: config.rs  context_menu.rs  handlers.rs  lib.rs  main.rs  prelude.rs  ui.rs  utils.rs
src/controllers/: handlers.rs  mod.rs  search_handler.rs
src/database/: mod.rs  sqlite.rs
src/handlers/: basic.rs
src/models/: config.rs  database.rs
src/services/: aria2.rs  database_manager.rs  mod.rs
src/services/database/: connector.rs  mod.rs  sqlite.rs
src/ui/: mod.rs  prelude.rs  ui_handler.rs
src/utils/: common.rs
src/views/: ui.rs
static/: index.html  style.css
static/js/: main.js
tests/: aria2_test.rs  http_test.rs  integration_test.rs  search_test.rs
ui/: app_window.slint
