[package]
name = "file_search_app"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = "1.3"
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"

[build-dependencies]
slint-build = "1.3"
