[package]
name = "netdisk_db"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = "1.14"
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
arboard = "3.6.1"
r2d2_sqlite = "0.24"
actix-web = "4"
reqwest = "0.12"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
netdisk-core = { git = "https://github.com/bleedingfight/netdisk.git", package = "netdisk-core",branch = "master"}
[build-dependencies]
slint-build = "1.14"
